minify and optimize

--- a/404.html
+++ b/404.html
@@ -118,7 +118,7 @@
         </div>
         <div class="header__wrapper-overlay-menu container-fluid container-fluid_paddings">
           <div class="header__wrapper-menu">
-            We Also Speicalize In ...
+            We Also Specialize In ...
             <ul class="menu-overlay js-menu-overlay">
               <li class="menu-item-has-children"><a class="h2" href="https://api-consulting.taliferro.com" data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">APIs</div>
