--- a/machine-learning-stories.html
+++ b/machine-learning-stories.html
@@ -11,9 +11,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta content="telephone=no" name="format-detection" />
   <meta name="HandheldFriendly" content="true" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Cinzel:400,700%7CRaleway:500,500i,600,700%7CMaterial+Icons&amp;display=swap" />
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Cinzel:400,700%7CRaleway:500,500i,600,700%7CMaterial+Icons&amp;display=swap"  media="print" onload="this.media='all'"/>
   <link rel="stylesheet" type="text/css" href="css/vendor.css" />
-  <link rel="stylesheet" type="text/css" href="css/main.css" />
+  <link rel="stylesheet" type="text/css" href="css/main-min.css" />
   <link rel="manifest" href="img/general/manifest.json" />
   <link rel="icon" type="image/x-icon" href="img/general/favicon.ico">
   <link rel="apple-touch-icon" href="img/general/apple-touch-icon.png">
@@ -191,7 +191,7 @@
         </div>
       </div>
       <div class="header__wrapper-overlay-menu container-fluid container-fluid_paddings">
-        <div class="header__wrapper-menu"> We Also Speicalize In ... <ul class="menu-overlay js-menu-overlay">
+        <div class="header__wrapper-menu"> We Also Specialize In ... <ul class="menu-overlay js-menu-overlay">
             <li class="menu-item-has-children"><a class="h2" href="https://api-consulting.taliferro.com" data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">APIs</div>
               </a>
@@ -714,8 +714,8 @@
       
     </script>
   <script src="js/vendor.js"></script>
-  <script src="js/components.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?callback=Function.prototype&amp;key=AIzaSyBwR_TrF6h7-pMxkKv_q2t8BXX3w6QuFOc" async></script>
+  <script src="js/components-min.js"></script>
+
 </body>
 
 </html>
